# aubo_melodic

./: README.md
arm_motion/: CMakeLists.txt  package.xml
arm_motion/config/: camera_aubo_config.yaml  camera_tcp_config.yaml
arm_motion/script/: aubo_kinematics.py  aubo_robotcontrol.py  auboarm_controll.py  utility.py
arm_motion/src/: arm_motion.cpp
aubo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aubo_moveit_config/config/: aubo_i5.srdf  controllers_gazebo.yaml  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
aubo_moveit_config/launch/: aubo_i5_moveit_controller_manager.launch.xml  aubo_moveit_planning_executation.launch  chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  run_benchmark_ompl.launch  setup_assistant.launch
aubo_robot/: .gitignore
aubo_simulation/: CMakeLists.txt  package.xml
aubo_simulation/launch/: aubo_simulation.launch
aubo_simulation/rviz/: urdf.rviz
aubo_simulation/src/: kinematics.cpp  reverse_kinematics.cpp  test.cpp
aubo_simulation/urdf/: aubo_i5.urdf
paintingrobot2_description/: CMakeLists.txt  package.xml  urdf.rviz
paintingrobot2_description/config/: joint_names_paintingrobot2_description.yaml
paintingrobot2_description/launch/: display.launch  gazebo.launch  urdf_upload.launch
paintingrobot2_description/meshes/: base_link.STL  lifting_link.STL
paintingrobot2_description/urdf/: aubo_i10.urdf  paintingrobot2_description.csv  (+1 more)
probot_vision/: CMakeLists.txt
(+6 files in other folders)
